// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Support Form Component Form should render 1`] = `
<div
  className="SupportForm"
>
  <Panel.Section>
    <h6>
      Submit A Support Ticket
    </h6>
  </Panel.Section>
  <form>
    <Panel.Section>
      <Field
        component={[Function]}
        errorInLabel={true}
        label="I need help with..."
        name="issueId"
        options={
          Array [
            Object {
              "disabled": true,
              "label": "Select an option",
              "value": "",
            },
            Object {
              "label": "I need help!",
              "value": "technical_issues",
            },
          ]
        }
        validate={[Function]}
      />
      <Field
        component={[Function]}
        errorInLabel={true}
        label="Tell us more about your issue"
        multiline={true}
        name="message"
        resize="none"
        rows={10}
        validate={[Function]}
      />
      <Field
        component={[Function]}
        label="Attach a file"
        name="attachment"
        type="file"
        validate={[Function]}
      />
    </Panel.Section>
    <Panel.Section>
      <Button
        primary={true}
        size="default"
        submit={true}
      >
        Submit Ticket
      </Button>
      <Button
        className="CancelBtn"
        onClick={[Function]}
        size="default"
      >
        Cancel
      </Button>
    </Panel.Section>
  </form>
</div>
`;

exports[`Support Form Component Form should render issue dropdown with help text 1`] = `
<Field
  component={[Function]}
  errorInLabel={true}
  helpText={
    <UNDEFINED>
      Additional technical support is available on paid plans. 
      <PageLink
        onClick={[MockFunction]}
        to="/account/billing/plan"
      >
        Upgrade now
      </PageLink>
      .
    </UNDEFINED>
  }
  label="I need help with..."
  name="issueId"
  options={
    Array [
      Object {
        "disabled": true,
        "label": "Select an option",
        "value": "",
      },
      Object {
        "label": "I need help!",
        "value": "technical_issues",
      },
    ]
  }
  validate={[Function]}
/>
`;

exports[`Support Form Component Form should render no issue view when no issues are available 1`] = `
<NoIssues
  onCancel={[Function]}
/>
`;

exports[`Support Form Component Form should render with selected issue message label 1`] = `
<div
  className="SupportForm"
>
  <Panel.Section>
    <h6>
      Submit A Support Ticket
    </h6>
  </Panel.Section>
  <form>
    <Panel.Section>
      <Field
        component={[Function]}
        errorInLabel={true}
        label="I need help with..."
        name="issueId"
        options={
          Array [
            Object {
              "disabled": true,
              "label": "Select an option",
              "value": "",
            },
            Object {
              "label": "I need help!",
              "value": "technical_issues",
            },
          ]
        }
        validate={[Function]}
      />
      <Field
        component={[Function]}
        errorInLabel={true}
        label="Tell use more about your technical issue"
        multiline={true}
        name="message"
        resize="none"
        rows={10}
        validate={[Function]}
      />
      <Field
        component={[Function]}
        label="Attach a file"
        name="attachment"
        type="file"
        validate={[Function]}
      />
    </Panel.Section>
    <Panel.Section>
      <Button
        primary={true}
        size="default"
        submit={true}
      >
        Submit Ticket
      </Button>
      <Button
        className="CancelBtn"
        onClick={[Function]}
        size="default"
      >
        Cancel
      </Button>
    </Panel.Section>
  </form>
</div>
`;
